
  XXX: generate tag summary with private/generate-tag-summary

  * checks/binaries.desc:
    + [NT] Rewrite description for hardening-no-bindnow.  There
      is no references to why bindnow would cause issues.
  * checks/debhelper.pm:
    + [NT] The /usr/share/R/debian/r-cran.mk file implies
      /usr/share/cdbs/1/rules/debhelper.mk.
  * checks/fields.{desc,pm}:
    + [JW] Fix typos.
  * checks/files.desc:
    + [BR] Do not suggest unsupported Multi-arch: no.
      (Closes: #816455)
    + [JW] Fix typos.
  * checks/files.pm:
    + [JW] Fix false positive gzip-file-is-not-multi-arch-same-safe when
      processing multiple debs.  (Closes: #738444)
  * checks/info-files.desc:
    + [NT] Use "gzip -9n" rather than "gzip -9" in examples.
  * checks/init.d.desc:
    + [JW] Fix typo.
  * checks/manpages.desc:
    + [NT] Use "gzip -9n" rather than "gzip -9" in examples.
  * checks/scripts.{desc,pm}:
    + [NT] Add tracking tag to trace auto-generated shell
      snippets in maintainer scripts.
  * checks/shared-libs.desc:
    + [NT] Improve the description for missing ldconfig trigger
      to cover that debhelper will generally add it
      automatically.  Most packages will just need a rebuild.
    + [JW] Fix false positive dev-pkg-without-shlib-symlink for GCC runtime
      libraries.  Thanks to Matthias Klose for the bug report.
      (Closes: #823833)
  * checks/testsuite.pm:
    + [NT] Apply patch from Ondřej Nový to add more known
      autodep8 test suites.  (Closes: #823088)
  * checks/upstream-metadata.pm:
    + [JW] Include YAML validation error in the output.

  * collection/*:
    + [NT] Always pass "-n" to "gzip".

  * commands/reporting-html-reports.pm:
    + [NT] Remove "$COPY_DOCS" configuration option.  The
      html_reports now always copies the documentation.
  * commands/reporting-lintian-harness.pm:
    + [NT] Re-enable pedantic tags by default.  These were
      disabled in the previous release by mistake.

  * data/binaries/hardening-tags: