@@ -1,0 +1,1 @@
+E: no-sha256-checksum source: no-strong-checksums-in-dsc
